--- a/app/src/main/res/layout/activity_booking_requests.xml
+++ b/app/src/main/res/layout/activity_booking_requests.xml
@@ -26,6 +26,7 @@
         android:id="@+id/recyclerView_booking_request"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
