working on system

--- a/app/src/main/res/layout/activity_booking_requests.xml
+++ b/app/src/main/res/layout/activity_booking_requests.xml
@@ -9,7 +9,7 @@
     android:background="@color/colorBlack">
 
     <TextView
-        android:id="@+id/txt_new_request"
+        android:id="@+id/txt_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="You have 10 new requests."
