--- a/app/src/main/res/layout/edit_blog_activity.xml
+++ b/app/src/main/res/layout/edit_blog_activity.xml
@@ -13,6 +13,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/featuredimg"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:background="#fff"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ProgressBar
+            android:id="@+id/progressBarFeed"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:indeterminateDrawable="@drawable/progressbar"
+            app:layout_constraintBottom_toBottomOf="@+id/featuredimg"
+            app:layout_constraintEnd_toEndOf="@+id/featuredimg"
+            app:layout_constraintStart_toStartOf="@+id/featuredimg"
+            app:layout_constraintTop_toTopOf="@+id/featuredimg" />
+
         <EditText
             android:id="@+id/txt_blog_title"
             android:layout_width="match_parent"
@@ -30,26 +50,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <ImageView
-            android:id="@+id/featuredimg"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:background="#fff"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/camera"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:layout_constraintBottom_toBottomOf="@+id/featuredimg"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/featuredimg"
-            app:layout_constraintTop_toTopOf="@+id/featuredimg"
-            app:srcCompat="@drawable/ic_add_a_photo_" />
 
         <EditText
             android:id="@+id/txt_blog_discription"
