--- a/app/src/main/res/layout/item_booking_request.xml
+++ b/app/src/main/res/layout/item_booking_request.xml
@@ -26,20 +26,20 @@
                 android:id="@+id/img_requester"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/woman"
                 android:scaleType="centerCrop"
+                app:srcCompat="@drawable/woman"
                 tools:layout_editor_absoluteX="0dp"
                 tools:layout_editor_absoluteY="61dp" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyle"
-                android:indeterminateDrawable="@drawable/progressbar"
-                android:layout_gravity="center"
-                android:padding="4dp"
-                android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:indeterminateDrawable="@drawable/progressbar"
+                android:padding="4dp"
+                android:visibility="gone" />
 
         </androidx.cardview.widget.CardView>
 
@@ -48,82 +48,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
-            android:layout_marginLeft="14dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
             android:text="Esther Berry"
             android:textColor="@color/colorBlack"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/card_img"
             app:layout_constraintStart_toEndOf="@+id/card_img"
-            app:layout_constraintTop_toTopOf="@+id/card_img"
-            app:layout_constraintVertical_bias="0.25" />
-
-        <TextView
-            android:id="@+id/txt_sirvice_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/roundshape"
-            android:gravity="center"
-            android:paddingLeft="9dp"
-            android:paddingTop="4dp"
-            android:paddingRight="9dp"
-            android:paddingBottom="4dp"
-            android:text="Service Name"
-            android:textColor="#fff"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/txt_requester_name"
-            app:layout_constraintTop_toBottomOf="@+id/txt_requester_name" />
-
-        <TextView
-            android:id="@+id/txt_discount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:gravity="center"
-            android:background="@drawable/roundshape"
-            android:paddingLeft="9dp"
-            android:paddingTop="4dp"
-            android:paddingRight="9dp"
-            android:paddingBottom="4dp"
-            android:text="Discount"
-            android:textColor="#fff"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_sirvice_name"
-            app:layout_constraintStart_toEndOf="@+id/txt_sirvice_name"
-            app:layout_constraintTop_toTopOf="@+id/txt_sirvice_name" />
+            app:layout_constraintTop_toTopOf="@+id/card_img" />
 
         <TextView
             android:id="@+id/txt_sirvice_charges"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
             android:text="$25.00"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorBlue"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/card_img"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/card_img"
-            app:layout_constraintVertical_bias="0.39" />
+            app:layout_constraintStart_toStartOf="@+id/txt_requester_name"
+            app:layout_constraintTop_toBottomOf="@+id/txt_requester_name" />
 
         <TextView
             android:id="@+id/textView19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
             android:text="Booking Date and Time"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/card_img"
-            app:layout_constraintTop_toBottomOf="@+id/card_img" />
+            app:layout_constraintStart_toStartOf="@+id/serviceType"
+            app:layout_constraintTop_toBottomOf="@+id/serviceType" />
 
         <TextView
             android:id="@+id/txt_start_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="1dp"
+            android:fontFamily="@font/montserrat"
             android:text="01-09-2020"
             android:textColor="@color/colorBlack"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/textView19"
             app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
@@ -139,20 +104,23 @@
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
             android:text="Location"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/txt_start_date"
-            app:layout_constraintTop_toBottomOf="@+id/divider3" />
+            app:layout_constraintStart_toStartOf="@+id/phoneNo"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNo" />
 
         <TextView
             android:id="@+id/txt_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
             android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
             android:text="105 william St, Chicago, US"
             android:textColor="@color/colorBlack"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
@@ -164,117 +132,162 @@
             app:layout_constraintStart_toStartOf="@+id/txt_address"
             app:layout_constraintTop_toBottomOf="@+id/txt_address" />
 
-        <ImageView
-            android:id="@+id/accept_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/txt_accept"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_address"
-            app:srcCompat="@drawable/ic_check_blue" />
-
-        <ImageView
-            android:id="@+id/img_cancle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
-            app:layout_constraintEnd_toStartOf="@+id/txt_cancel"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/txt_message"
-            app:layout_constraintTop_toTopOf="@+id/imageView12"
-            app:srcCompat="@drawable/ic_cancel" />
-
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/txt_message"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/txt_accept"
-            app:layout_constraintTop_toBottomOf="@+id/txt_address"
-            app:srcCompat="@drawable/ic_message" />
-
-        <TextView
-            android:id="@+id/txt_accept"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="Accept"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/accept_check"
-            app:layout_constraintEnd_toStartOf="@+id/imageView12"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/accept_check"
-            app:layout_constraintTop_toTopOf="@+id/accept_check" />
-
-        <TextView
-            android:id="@+id/txt_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="Message"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
-            app:layout_constraintEnd_toStartOf="@+id/img_cancle"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/imageView12"
-            app:layout_constraintTop_toTopOf="@+id/imageView12" />
-
-        <TextView
-            android:id="@+id/txt_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:text="Cancle"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_cancle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/img_cancle"
-            app:layout_constraintTop_toTopOf="@+id/img_cancle" />
-
         <TextView
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:fontFamily="@font/montserrat"
             android:text="To"
             android:textColor="@color/colorBlue"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_start_date"
             app:layout_constraintStart_toEndOf="@+id/txt_start_date"
-            app:layout_constraintTop_toBottomOf="@+id/textView19" />
+            app:layout_constraintTop_toTopOf="@+id/txt_start_date" />
 
         <TextView
             android:id="@+id/txt_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:fontFamily="@font/montserrat"
             android:text="02-9-2020"
             android:textColor="@color/colorBlack"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView14"
             app:layout_constraintStart_toEndOf="@+id/textView14"
             app:layout_constraintTop_toTopOf="@+id/textView14" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Email"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/divider3"
+            app:layout_constraintTop_toBottomOf="@+id/txt_start_date" />
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:fontFamily="@font/montserrat"
+            android:text="TextView"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Phone No"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/email"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
+
+        <TextView
+            android:id="@+id/phoneNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:text="no Text"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Service Name"
+            app:layout_constraintStart_toStartOf="@+id/card_img"
+            app:layout_constraintTop_toBottomOf="@+id/card_img" />
+
+        <TextView
+            android:id="@+id/serviceName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:text="TextView"
+            android:textColor="@color/colorBlack"
+            app:layout_constraintStart_toStartOf="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Service Type"
+            app:layout_constraintStart_toStartOf="@+id/serviceName"
+            app:layout_constraintTop_toBottomOf="@+id/serviceName" />
+
+        <TextView
+            android:id="@+id/serviceType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:text="TextView"
+            android:textColor="@color/colorBlack"
+            app:layout_constraintStart_toStartOf="@+id/textView9"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+        <Button
+            android:id="@+id/accept"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/lighblue_roundshap"
+            android:padding="0dp"
+            android:text="Accept"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/message"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider4" />
+
+        <Button
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:background="@drawable/lighblue_roundshap"
+            android:padding="0dp"
+            android:text="Message"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/accept"
+            app:layout_constraintEnd_toStartOf="@+id/reject"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/accept"
+            app:layout_constraintTop_toTopOf="@+id/accept" />
+
+        <Button
+            android:id="@+id/reject"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:background="@drawable/lighred_roundshap"
+            android:padding="0dp"
+            android:text="Reject"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/message"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/message"
+            app:layout_constraintTop_toTopOf="@+id/message" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
