--- a/app/src/main/res/layout/my_feeds_item_layout.xml
+++ b/app/src/main/res/layout/my_feeds_item_layout.xml
@@ -37,13 +37,15 @@
 
         <TextView
             android:id="@+id/txt_uploaderName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
+            android:maxLines="1"
             android:text="Fransic Briggs"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/txt_uploadTime"
+            app:layout_constraintEnd_toStartOf="@+id/menu"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_uploaderImage"
             app:layout_constraintTop_toTopOf="@+id/img_uploaderImage"
             app:layout_constraintVertical_chainStyle="packed"
@@ -77,17 +79,6 @@
             app:layout_constraintTop_toBottomOf="@+id/img_feedImage" />
 
         <TextView
-            android:id="@+id/txt_ReadMore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Read more..."
-            android:textColor="#ACB1C0"
-            app:layout_constraintStart_toStartOf="@+id/txt_imgDescription"
-            app:layout_constraintTop_toBottomOf="@+id/txt_imgDescription"
-            tools:text="Read more..." />
-
-        <TextView
             android:id="@+id/txt_chatNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -105,12 +96,11 @@
             android:id="@+id/img_chat"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginTop="4dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
             android:contentDescription="TODO"
+            app:layout_constraintBottom_toBottomOf="@+id/img_likes"
             app:layout_constraintEnd_toStartOf="@+id/txt_chatNo"
-            app:layout_constraintTop_toBottomOf="@+id/txt_ReadMore"
+            app:layout_constraintTop_toTopOf="@+id/img_likes"
             app:srcCompat="@drawable/ic_chat" />
 
         <TextView
@@ -132,10 +122,9 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_ReadMore"
+            app:layout_constraintTop_toBottomOf="@+id/txt_imgDescription"
             app:srcCompat="@drawable/ic_heart_fill"
             tools:ignore="VectorDrawableCompat" />
 
@@ -143,10 +132,9 @@
             android:id="@+id/menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/txt_uploaderName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.96"
-            app:layout_constraintStart_toEndOf="@+id/txt_uploaderName"
             app:layout_constraintTop_toTopOf="@+id/txt_uploaderName"
             app:srcCompat="@drawable/ic_more_horiz" />
 
